objects/Sutter_Status__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sutter Status</relationshipLabel>
        <relationshipName>Sutter_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ActionRequired__c</fullName>
        <inlineHelpText>For “No” Response to this question: Submit a CIP with tiered network information to obtain Sutter’s response on participation. If Sutter is to be in a lower tier they must be made aware and approve it before any pricing set up begins for the Client.</inlineHelpText>
        <label>Action Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>If Yes, capture Sutter’s approval in CIP</fullName>
                </value>
                <value>
                    <fullName>If No, submit CIP w/ tiered network info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IfYeshasrequestbeensenttoSutter__c</fullName>
        <label>If Yes, has request been sent to Sutter?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Requesting_tiered_network_w_Sutter__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_client_impacted_by_Sutter_contract__c</fullName>
        <label>Is client impacted by Sutter contract?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requesting_tiered_network_w_Sutter__c</fullName>
        <inlineHelpText>Tiering requests most commonly occur when a client is also a provider and they want to encourage their employees to use their own facility vs. Sutter or BDC. If Yes, obtain approval from John Pickett. Attach approval to CIP related to Sutter status.</inlineHelpText>
        <label>Requesting tiered network w/ Sutter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, attach approval to CIP</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date in which current Sutter status changed.</inlineHelpText>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WGS_Exception_granted_by_UW_RVP__c</fullName>
        <inlineHelpText>If client Attests Sutter Contract but strongly disputes the Sutter Prompt Pay fee, the UW RVP may be contacted to request an exception to have Anthem incur the penalty fee. Only avail for WGS clients on RMB billing and not available to any NASCO client.</inlineHelpText>
        <label>WGS Exception granted by UW RVP?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>What_action_did_your_client_take__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, Attach UW approval to CIP</fullName>
                </value>
                <value>
                    <fullName>NASCO – N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_action_did_your_client_take__c</fullName>
        <label>What action did your client take?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_client_impacted_by_Sutter_contract__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Signed the Sutter Attestation</fullName>
                </value>
                <value>
                    <fullName>Agreed to ASO Amendment</fullName>
                </value>
                <value>
                    <fullName>Agreed to Sutter Amendment</fullName>
                </value>
                <value>
                    <fullName>Repudiation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sutter Status</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Sutter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sutter Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>